# catch_panic

./: .gitignore  .gitmodules  Cargo.toml  README.md  pre-commit  run-tests.bat
catch_panic/: Cargo.toml
catch_panic/src/: handler.rs  lib.rs
catch_panic/ui_tests/fail/: invalid_default.rs  invalid_default.stderr  invalid_handler.rs  invalid_handler.stderr  no_default.rs  no_default.stderr  no_jni_env.rs  no_jni_env.stderr  on_struct.rs  on_struct.stderr  wrong_handler_type.rs  wrong_handler_type.stderr
catch_panic_macros/: Cargo.toml
catch_panic_macros/src/: lib.rs
