[package]
name = "catch_panic"
version = "1.0.0"
edition = "2021"
authors = [
    "Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>",
    "Cayden Pocrass <caydenrp9@gmail.com>",
    "AdityaJain1030 <50159919+AdityaJain1030@users.noreply.github.com>"
]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HermitSocialClub/catch_panic"
description = "A helper macro for safe Java-Rust interop that \"catches\" Rust panics and rethrows them as Java exceptions."
keywords = ["ffi", "jni", "java"]
categories = ["api-bindings"]
exclude = ["testlib"]

[features]
# internal feature for doctests
internal-doctests = []

[dependencies]
jni = "0"
catch_panic_macros = { version = "1.0.0", path = "../catch_panic_macros" }

[dev-dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
catch_panic = { path = ".", features = ["internal-doctests"] }
trybuild = "1.0.63"
